testdata/merge/valid/02_simple_dword.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\TestApp]
"Enabled"=dword:00000001
