testdata/merge/invalid/err_invalid_dword.reg
Windows Registry Editor Version 5.00

[HKEY_LOCAL_MACHINE\SOFTWARE\Test]
"BadDword"=dword:GGGG0000
